style: update prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "bracketSameLine": true,
+  "semi": true,
+  "tabWidth": 4,
+  "printWidth": 130,
+  "endOfLine": "auto"
 }
