--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "typeorm:migration:create": "yarn run typeorm -- migration:create",
+    "typeorm:migration:generate": "yarn run typeorm -- migration:generate -d src/common/data-sources/ds.ts",
+    "typeorm:migration:up": "yarn run typeorm -- migration:run -d src/common/data-sources/ds.ts",
+    "typeorm:migration:down": "yarn run typeorm -- migration:revert -d src/common/data-sources/ds.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
